force-app/main/default/objects/ApplicationProductPartyRole__c/ApplicationProductPartyRole__c.object-meta.xml
<CustomObject>
    <description>Links the Application Form Product with the Applicant and the role the applicant associated with the product</description>
    <label>Application Product Party Role</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Application Product Party Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Product Party Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>