force-app/main/default/objects/ApplicationProductPartyRole__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the Applicant</description>
    <label>Applicant</label>
    <referenceTo>Applicant</referenceTo>
    <relationshipLabel>Application Product Party Roles</relationshipLabel>
    <relationshipName>Application_Product_Party_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>