force-app/main/default/objects/ApplicationProductPartyRole__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>Applicant__r.FirstName&amp;&quot; &quot;&amp;Applicant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>