force-app/main/default/objects/ApplicationProductPartyRole__c/fields/ApplicationForm__c.field-meta.xml
<CustomField>
    <fullName>ApplicationForm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links with the ApplicationForm</description>
    <label>Application Form</label>
    <referenceTo>ApplicationForm</referenceTo>
    <relationshipLabel>Application Product Party Roles</relationshipLabel>
    <relationshipName>Application_Product_Party_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>