force-app/main/default/objects/ApplicationProductPartyRole__c/fields/ApplicationFormProduct__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFormProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the Product</description>
    <label>Application Form Product</label>
    <referenceTo>ApplicationFormProduct</referenceTo>
    <relationshipLabel>Application Product Party Roles</relationshipLabel>
    <relationshipName>Application_Product_Party_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>