force-app/main/default/objects/ApplicationProductPartyRole__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Defines the role the Applicant plays in the product</description>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Authorized Signer</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>